# trackly

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UPDATER.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop-release.yml  release.yml
crates/trackly-cli/: Cargo.toml
crates/trackly-cli/src/: main.rs  ui.rs
crates/trackly-core/: Cargo.toml
crates/trackly-core/src/: git.rs  lib.rs  model.rs  observe.rs  parse.rs  report.rs  score.rs  store.rs
crates/trackly-mcp/: Cargo.toml
crates/trackly-mcp/src/: main.rs  tools.rs
docs/: index.html
scripts/: install.sh
src/: App.css  App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  NewProjectModal.tsx  Overview.tsx  ProgressCheckModal.tsx  ProjectView.tsx  Sidebar.tsx  Sparkline.tsx  UpdateBanner.tsx  WorkSessionModal.tsx  status.ts
src/store/: useStore.ts
src/types/: index.ts
