[workspace]
resolver = "2"
members = ["crates/trackly-core", "crates/trackly-cli", "crates/trackly-mcp"]
# The Tauri desktop app has its own build expectations; keep it out of this workspace for now.
exclude = ["src-tauri"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vehutech/trackly"
authors = ["Trackly contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
