[package]
name = "trackly-desktop"
version = "0.4.0"
description = "Trackly desktop — a machine-wide view of your tracked repos."
authors = ["Trackly contributors"]
edition = "2021"

# The library the Tauri app runs; main.rs is a thin launcher.
[lib]
name = "trackly_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trackly-core = { path = "../crates/trackly-core" }
