[package]
name = "trackly-core"
description = "Core engine for Trackly: plan model, store, scoring, and report rendering."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
